--- a/Makefile.avr
+++ b/Makefile.avr
@@ -1,71 +1,109 @@
 VERSION = 0.1
 
-prefix = /mingw64
-exec_prefix = ${prefix}
-libdir = ${exec_prefix}/lib
-bindir = ${exec_prefix}/bin
-includedir = ${prefix}/include
+SRC = lzfx.c
 
-
+MCU = avr5
+TARGET = liblzfx
+FORMAT = ihex
 
 CC = avr-gcc
-CPPFLAGS = -I.
-CFLAGS = -I. -g -O2 -O3 -funroll-all-loops
-LDFLAGS =
-RANLIB = ranlib
-INSTALL = /usr/bin/install -c
-INSTALL_DATA = ${INSTALL} -m 644
+AR = avr-ar
+RANLIB = avr-ranlib
+OBJCOPY = avr-objcopy
+OBJDUMP = avr-objdump
+SIZE = avr-size
+NM = avr-nm
 
-DISTNAME = lzfx-$(VERSION)
-DISTFILES = README LICENSE lzfx.c lzfx.h tests/*.test tests/test.c lzfx-util.c \
-            configure Makefile.in install-sh
+CSTANDARD = -std=gnu99
+CPPFLAGS = -I.
+CFLAGS = -Os
+CFLAGS += -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums
+CFLAGS += -Wall -Wstrict-prototypes
+CFLAGS += $(CSTANDARD)
+LDFLAGS = -Wl,-Map=$(TARGET).map,--cref
 
 TESTDIR = tests
 TESTFILES = $(TESTDIR)/empty.test \
-            $(TESTDIR)/random.test
+			$(TESTDIR)/random.test
 
-all: Makefile liblzfx.a util
+OBJ = $(SRC:.c=.o)
+
+GENDEPFLAGS = -MD -MP -MF .dep/$(@F).d
+ALL_CFLAGS = -mmcu=$(MCU) -I. $(CFLAGS) $(GENDEPFLAGS)
+
+HEXSIZE = $(SIZE) --target=$(FORMAT) $(TARGET).hex
+ELFSIZE = $(SIZE) -A $(TARGET).elf
+
+all: sizebefore build sizeafter
+
+build: elf hex eep lss sym
+
+elf: $(TARGET).elf
+hex: $(TARGET).hex
+eep: $(TARGET).eep
+lss: $(TARGET).lss
+sym: $(TARGET).sym
+
+MSG_SIZE_BEFORE = Size before:
+MSG_SIZE_AFTER = Size after:
+sizebefore:
+	@if test -f $(TARGET).elf; then echo; echo $(MSG_SIZE_BEFORE); $(ELFSIZE); echo; fi
+
+sizeafter:
+	@if test -f $(TARGET).elf; then echo; echo $(MSG_SIZE_AFTER); $(ELFSIZE); echo; fi
 
 clean:
-	-rm -f *.o *.a lzfx tests/test
+	-rm -f *.o *.a *.elf *.eep *.hex *.lss *.sym tests/test
 
 lzfx.o: lzfx.c lzfx.h
 	$(CC) $(CFLAGS) lzfx.c -c
 
-liblzfx.a: lzfx.o
-	rm -f $@
-	$(AR) rc $@ $^
-	$(RANLIB) $@
+COFFCONVERT=$(OBJCOPY) --debugging \
+--change-section-address .data-0x800000 \
+--change-section-address .bss-0x800000 \
+--change-section-address .noinit-0x800000 \
+--change-section-address .eeprom-0x810000
+
+coff: $(TARGET).elf
+	@echo
+	$(COFFCONVERT) -O coff-avr $< $(TARGET).cof
+
+
+extcoff: $(TARGET).elf
+	@echo
+	$(COFFCONVERT) -O coff-ext-avr $< $(TARGET).cof
+
+# Create final output files (.hex, .eep) from ELF output file.
+%.hex: %.elf
+	@echo
+	$(OBJCOPY) -O $(FORMAT) -R .eeprom $< $@
+
+%.eep: %.elf
+	@echo
+	-$(OBJCOPY) -j .eeprom --set-section-flags=.eeprom="alloc,load" \
+	--change-section-lma .eeprom=0 -O $(FORMAT) $< $@
+
+# Create extended listing file from ELF output file.
+%.lss: %.elf
+	@echo
+	$(OBJDUMP) -h -S $< > $@
+
+# Create a symbol table from ELF output file.
+%.sym: %.elf
+	@echo
+	$(NM) -n $< > $@
+
+.SECONDARY : $(TARGET).elf
+.PRECIOUS : $(OBJ)
+%.elf: $(OBJ)
+	@echo
+	$(CC) $(ALL_CFLAGS) $^ --output $@ $(LDFLAGS)
 
 test: tests/test.c
-	$(CC) $(CFLAGS) $(TESTDIR)/test.c lzfx.c -llzf -o $(TESTDIR)/test
+	$(CC) $(ALL_CFLAGS) $(TESTDIR)/test.c lzfx.c -llzfx -o $(TESTDIR)/test
 
 check: test
 	dd if=/dev/zero of=$(TESTDIR)/empty.test bs=1M count=4 > /dev/null 2>&1
 	dd if=/dev/urandom of=$(TESTDIR)/random.test bs=1M count=1 > /dev/null 2>&1
 	$(TESTDIR)/test $(TESTDIR)/*.test
 	-rm -f $(TESTFILES)
-
-install: all
-	$(INSTALL) -d $(includedir)
-	$(INSTALL_DATA) lzfx.h $(includedir)
-	$(INSTALL) -d $(libdir)
-	$(INSTALL_DATA) liblzfx.a $(libdir)
-	$(INSTALL) -d $(bindir)
-	$(INSTALL) -m 755 lzfx $(bindir)
-
-util: lzfx-util.c lzfx.c
-	$(CC) $(CFLAGS) lzfx-util.c lzfx.c -o lzfx
-
-dist:
-	mkdir $(DISTNAME)
-	tar c $(DISTFILES) | tar xpC $(DISTNAME)
-	-chown -R root.root $(DISTNAME)
-	chmod -R u=rwX,go=rX $(DISTNAME)
-	tar cvf - $(DISTNAME) | gzip -9 > $(DISTNAME).tar.gz
-	rm -rf $(DISTNAME)
-	ls -l $(DISTNAME).tar.gz
-
-Makefile: Makefile.in
-	./config.status
-
